Fixed nav not working on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -764,7 +764,6 @@ footer p {
 		margin: 0;
 		padding-top: 50px;
 		padding-bottom: 20vh;
-		z-index: -1;
 	}
 	.navbar .logo .black {
 		opacity: 1;
